refactor: replace player capability runtime